// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInput component renders lg size 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-jVLVTy {
    z-index: 1;
  }

  .c-oUmPa {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    flex-shrink: 0;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-oUmPa[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-dWvLOH {
    border-color: var(--colors-tonal400) !important;
    z-index: 1;
    height: 100% !important;
  }

  .c-dWvLOH:hover {
    background: var(--colors-tonal50);
  }

  .c-dWvLOH:hover svg {
    color: var(--colors-tonal400);
  }

  .c-dWvLOH svg {
    color: var(--colors-tonal300);
  }

  .c-dWvLOH:active {
    background: var(--colors-tonal100);
  }

  .c-dWvLOH:active svg {
    color: var(--colors-tonal500);
  }

  .c-dWvLOH:disabled {
    opacity: 0.3;
    pointer-events: none;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-lfQsGQ {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-lfQsGQ:focus {
    border-color: var(--colors-primary800);
    outline: none;
  }

  .c-lfQsGQ[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-lfQsGQ::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }

  .c-kfLCww {
    fill: var(--colors-tonal500);
  }

  [data-align="end"] .c-kfLCww {
    margin-right: var(--space-2);
  }

  [data-align="start"] .c-kfLCww {
    margin-left: var(--space-2);
  }
}

@media  {
  .c-oUmPa-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-lfQsGQ-fwoCmE-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }

  .c-lfQsGQ-jAZHIx-size-lg {
    height: var(--sizes-5);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }
}

@media  {
  .c-oUmPa-fboUUB-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary800);
  }

  .c-oUmPa-fboUUB-cv:not(:disabled):hover,
  .c-oUmPa-fboUUB-cv:not(:disabled):focus {
    color: var(--colors-primary900);
  }

  .c-oUmPa-fboUUB-cv:not(:disabled):active {
    color: var(--colors-primary1000);
  }
}

@media  {
  .c-dWvLOH-iwWtoZ-css {
    border-right: none;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
  }

  .c-lfQsGQ-ibwGleD-css {
    border-radius: 0px;
    width: var(--sizes-6);
  }

  .c-lfQsGQ-ibwGleD-css:disabled {
    opacity: 0.3;
    pointer-events: none;
  }

  .c-dWvLOH-ihgsOSq-css {
    border-left: none;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
  }
}

<div>
  <div
    class="c-dhzjXW"
  >
    <span
      class="c-jVLVTy c-PJLV"
      data-state="closed"
      tabindex="-1"
    >
      <button
        aria-label="decrement"
        class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-fboUUB-cv c-dWvLOH c-dWvLOH-iwWtoZ-css"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 12H4"
          />
        </svg>
      </button>
    </span>
    <input
      aria-label="test"
      aria-valuemax="9007199254740991"
      aria-valuemin="0"
      aria-valuenow="0"
      class="c-lfQsGQ c-lfQsGQ-jAZHIx-size-lg c-lfQsGQ-ibwGleD-css"
      inputmode="numeric"
      name="test"
      pattern="[0-9]*"
      role="spinbutton"
      type="text"
      value="0"
    />
    <span
      class="c-jVLVTy c-PJLV"
      data-state="closed"
      tabindex="-1"
    >
      <button
        aria-label="increment"
        class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-fboUUB-cv c-dWvLOH c-dWvLOH-ihgsOSq-css"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 12H4m8-8v16"
          />
        </svg>
      </button>
    </span>
  </div>
</div>
`;

exports[`NumberInput component renders number input  1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-jVLVTy {
    z-index: 1;
  }

  .c-oUmPa {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    flex-shrink: 0;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-oUmPa[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-dWvLOH {
    border-color: var(--colors-tonal400) !important;
    z-index: 1;
    height: 100% !important;
  }

  .c-dWvLOH:hover {
    background: var(--colors-tonal50);
  }

  .c-dWvLOH:hover svg {
    color: var(--colors-tonal400);
  }

  .c-dWvLOH svg {
    color: var(--colors-tonal300);
  }

  .c-dWvLOH:active {
    background: var(--colors-tonal100);
  }

  .c-dWvLOH:active svg {
    color: var(--colors-tonal500);
  }

  .c-dWvLOH:disabled {
    opacity: 0.3;
    pointer-events: none;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-lfQsGQ {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-lfQsGQ:focus {
    border-color: var(--colors-primary800);
    outline: none;
  }

  .c-lfQsGQ[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-lfQsGQ::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }
}

@media  {
  .c-oUmPa-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-lfQsGQ-fwoCmE-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }
}

@media  {
  .c-oUmPa-fboUUB-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary800);
  }

  .c-oUmPa-fboUUB-cv:not(:disabled):hover,
  .c-oUmPa-fboUUB-cv:not(:disabled):focus {
    color: var(--colors-primary900);
  }

  .c-oUmPa-fboUUB-cv:not(:disabled):active {
    color: var(--colors-primary1000);
  }
}

@media  {
  .c-dWvLOH-iwWtoZ-css {
    border-right: none;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
  }

  .c-lfQsGQ-ibwGleD-css {
    border-radius: 0px;
    width: var(--sizes-6);
  }

  .c-lfQsGQ-ibwGleD-css:disabled {
    opacity: 0.3;
    pointer-events: none;
  }

  .c-dWvLOH-ihgsOSq-css {
    border-left: none;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
  }
}

<div>
  <div
    class="c-dhzjXW"
  >
    <span
      class="c-jVLVTy c-PJLV"
      data-state="closed"
      tabindex="-1"
    >
      <button
        aria-label="decrement"
        class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-fboUUB-cv c-dWvLOH c-dWvLOH-iwWtoZ-css"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 12H4"
          />
        </svg>
      </button>
    </span>
    <input
      aria-label="test"
      aria-valuemax="9007199254740991"
      aria-valuemin="0"
      aria-valuenow="0"
      class="c-lfQsGQ c-lfQsGQ-fwoCmE-size-md c-lfQsGQ-ibwGleD-css"
      inputmode="numeric"
      name="test"
      pattern="[0-9]*"
      role="spinbutton"
      type="text"
      value="0"
    />
    <span
      class="c-jVLVTy c-PJLV"
      data-state="closed"
      tabindex="-1"
    >
      <button
        aria-label="increment"
        class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-fboUUB-cv c-dWvLOH c-dWvLOH-ihgsOSq-css"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 12H4m8-8v16"
          />
        </svg>
      </button>
    </span>
  </div>
</div>
`;
